// Vitest Snapshot v1

exports[`Autocomplete Results > should mark items as selected that appear in value array 1`] = `
<feather-list-stub
  aria-hidden="false"
  aria-multiselectable="true"
  class="feather-autocomplete-results-list"
  role="listbox"
  tabindex="-1"
>
  <!-- eslint-disable -->
  
  
  <feather-list-item-stub
    aria-selected="true"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="true"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test1"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test2"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test3"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test4"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
</feather-list-stub>
`;

exports[`Autocomplete Results > should mark items as selected that appear in value array and active when active index is set. 1`] = `
<feather-list-stub
  aria-hidden="false"
  aria-multiselectable="true"
  class="feather-autocomplete-results-list"
  role="listbox"
  tabindex="-1"
>
  <!-- eslint-disable -->
  
  
  <feather-list-item-stub
    aria-selected="true"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="true"
    id="ACTIVE"
    role="option"
    selected="true"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test1"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test2"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test3"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test4"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
</feather-list-stub>
`;

exports[`Autocomplete Results > should support active index being out of range 1`] = `
<feather-list-stub
  aria-hidden="false"
  aria-multiselectable="true"
  class="feather-autocomplete-results-list"
  role="listbox"
  tabindex="-1"
>
  <!-- eslint-disable -->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test1"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test2"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test3"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test4"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
</feather-list-stub>
`;

exports[`Autocomplete Results > should support active index within results range 1`] = `
<feather-list-stub
  aria-hidden="false"
  aria-multiselectable="true"
  class="feather-autocomplete-results-list"
  role="listbox"
  tabindex="-1"
>
  <!-- eslint-disable -->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="true"
    id="ACTIVE"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test1"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test2"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test3"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test4"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
</feather-list-stub>
`;

exports[`Autocomplete Results > should support no item active 1`] = `
<feather-list-stub
  aria-hidden="false"
  aria-multiselectable="true"
  class="feather-autocomplete-results-list"
  role="listbox"
  tabindex="-1"
>
  <!-- eslint-disable -->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test1"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test2"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test3"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test4"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
</feather-list-stub>
`;

exports[`Autocomplete Results > should support single select 1`] = `
<feather-list-stub
  aria-hidden="false"
  aria-multiselectable="false"
  class="feather-autocomplete-results-list"
  role="listbox"
  tabindex="-1"
>
  <!-- eslint-disable -->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test1"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test2"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test3"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
  <feather-list-item-stub
    aria-selected="false"
    asli="true"
    class="result-item hover"
    disabled="false"
    highlighted="false"
    role="option"
    selected="false"
    tabindex="-1"
  >
    <highlighter-stub
      highlight="off"
      query="t"
      text="Test4"
    />
    <!--v-if-->
  </feather-list-item-stub>
  <!--v-if-->
  
  
</feather-list-stub>
`;
